//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Section {
  id String [pk]
  name String [unique, not null]
  Item String
  items Item [not null]
  type Int
  media String
  description String
  keyword String
  url String
  data String
  assets String
  cloud String
  icon String
  background String
}

Table Item {
  id String [pk]
  value String [not null]
  section Section [not null]
  sectionId String [not null]
  options Option[] [not null]
  type Int
  media String
  description String
  keyword String
  url String
  data String
  assets String
  cloud String
  icon String
  background String
}

Table Post {
  id String [pk]
  title String [not null]
  description String [not null]
  audios String[] [not null]
  images String[] [not null]
  videos String[] [not null]
  options Option[] [not null]
  author User [not null]
  authorId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  learnLevels LearnLevel [not null]
  reactions Reaction [not null]
  comments Comment [not null]
  tagIDs String[] [not null]
  tags Tag [not null]
  collectionIDs String[] [not null]
  collections Collection [not null]
  Report Report [not null]
}

Table User {
  id String [pk]
  email String
  uid String [unique, not null]
  displayName String [not null]
  photoURL String
  coverImageURL String
  introduction String
  locale Locale
  posts Post [not null]
  reactions Reaction [not null]
  comments Comment [not null]
  learnLevels LearnLevel [not null]
  collections Collection [not null]
  followedBy User [not null]
  followedByIDs String[] [not null]
  following User [not null]
  followingIDs String[] [not null]
  hiddenPostIDs String[] [not null]
  pushSubscriptions PushSubscription[] [not null]
  Plan Plan [not null]
  inboxs Inbox [not null]
  inboxIDs String[] [not null]
  messages Message [not null]
  Report Report [not null]
}

Table Reaction {
  id String [pk]
  post Post [not null]
  postId String [not null]
  user User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Comment {
  id String [pk]
  post Post [not null]
  postId String [not null]
  user User [not null]
  userId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table LearnLevel {
  id String [pk]
  post Post [not null]
  postId String [not null]
  user User [not null]
  userId String [not null]
  level Int [not null]
  repeating Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tag {
  id String [pk]
  name String [unique, not null]
  description String [not null]
  postIDs String[] [not null]
  posts Post [not null]
}

Table Collection {
  id String [pk]
  user User [not null]
  userId String [not null]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  postIDs String[] [not null]
  posts Post [not null]
}

Table Plan {
  id String [pk]
  user User [not null]
  userId String [not null]
  description String [not null]
  priority Int [not null, default: 0]
  due DateTime
  status Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Report {
  id String [pk]
  sender User [not null]
  senderId String [not null]
  post Post [not null]
  postId String [not null]
  reason String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Inbox {
  id String [pk]
  participants User [not null]
  participantIDS String[] [not null]
  messages Message [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Message {
  id String [pk]
  inbox Inbox
  inboxId String
  sender User [not null]
  content String [not null]
  senderId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Locale {
  en
  vi
}

Ref: Item.sectionId > Section.id

Ref: Post.authorId > User.id

Ref: Post.tagIDs > Tag.id

Ref: Post.collectionIDs > Collection.id

Ref: User.followedByIDs > User.id

Ref: User.followingIDs > User.id

Ref: User.inboxIDs > Inbox.id

Ref: Reaction.postId > Post.id

Ref: Reaction.userId > User.id

Ref: Comment.postId > Post.id

Ref: Comment.userId > User.id

Ref: LearnLevel.postId > Post.id

Ref: LearnLevel.userId > User.id

Ref: Tag.postIDs > Post.id

Ref: Collection.userId > User.id

Ref: Collection.postIDs > Post.id

Ref: Plan.userId > User.id

Ref: Report.senderId > User.id

Ref: Report.postId > Post.id

Ref: Inbox.participantIDS > User.id

Ref: Message.inboxId > Inbox.id

Ref: Message.senderId > User.id